src/components/BodyAbout/BodyAboutStyles.css
.about__container {
  width: 100%;
  height: 400vh;
  position: relative;
  overflow: hidden;
}

.about__hero {
  top: 10%;
  position: absolute;
  width: 100%;
  height: 55vh;
  border: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.about__hero img{
  max-width: 100%;
  height: 100%;
  object-fit: cover;
  animation: hero__fadeInRight 2s ease-in-out;
  opacity: 0.6;
}

.about__hero>div>ul {
  padding: 1rem;
  font-size: 1.3rem;
  color: var(--text-color);
  font-family: Arial, sans-serif;
  font-weight: 400;
  text-align: left;
  animation: hero__fadeInLeft 5s ease;
}

.about__quote {
  position: absolute;
  display: flex;
  flex-direction: column;
  top: 150vh;
  color: var(--text-color);
  left: 50%;
  transform: translateX(-50%);
  line-height: 2.3rem;
  visibility: hidden;
}

.about__quote--active{
  animation: quotes__fadeInUp 2s ease;
  visibility: visible;
}

.about__quote .quote {
  font-family: "Courier New", Courier, monospace;
  font-size: 3.5rem;
}

.about__quote .symbol {
  font-size: 6rem;
  color: var(--cv-text-pink);
  font-size: bolder;
  margin-left: -2rem;
}

.about__quote .sub-content {
  margin-top: 1rem;
  font-family: "Consolas", monospace;
  font-size: 1.8rem;
  text-align: end;
  font-weight: medium;
  color: var(--sub-text-color);
}

/* CV */
.about__cv {
  position: absolute;
  width: 60%;
  height: auto;
  background-color: var(--cv-theme);
  padding: 2rem 1rem;
  left: 50%;
  top: 300vh;
  transform: translate(-50%, -50%);
  flex-wrap: wrap;
  word-wrap: break-word;
  max-height: 170vh;
  overflow-y: auto;
  overflow-x: hidden;
  visibility: hidden;
}

.about__cv--active{
  visibility: visible;
  animation: cv__fadeIn 2s ease-in-out;
}

.about__cv h1,
.about__cv span,
.about__cv p,
.about__cv h2,
.about__cv h3,
.about__cv h4,
.about__cv li {
  color: var(--cv-text);
  font-family: "Consolas", monospace;
  font-weight: 500;
  letter-spacing: 0.1rem;
  word-wrap: break-word;
}

/* CV HEADER */

.cv__header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 3rem;
}

.cv__header .right {
  display: flex;
  flex-direction: column;
}

.cv__header .right p {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.5rem;
  flex-wrap: wrap;
}

.cv__header .right p span {
  margin-left: 10px;
}

.cv__header .left {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 1rem;
}

/* CV CAREER OBJECTIVE  */

.cv__objective {
  margin-bottom: 2rem;
}

/* CV GRID LAYOUT  */
.cv__grid {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 2rem;
}

/* CV SKILL */
.cv__skill p {
  word-wrap: break-word;
}

.cv__skill ul {
  list-style-type: none;
  line-height: 1.5rem;
  margin-bottom: 1rem;
}

.cv__skill li {
  margin-left: 1.2rem;
}

/* CV EDUCATION */
.cv__education {
  margin-bottom: 2rem;
}

/* CV PROJECTS */
.cv__project ul {
  list-style-type: none;
  line-height: 1.5rem;
}

.cv__project li {
  margin-bottom: 1rem;
}

.cv__project .link::before {
  content: attr(href);
  cursor: pointer;
}

/* TEXT COLOR */

.about__cv .green-text {
  color: var(--cv-text-green);
}

.about__cv .pink-text {
  color: var(--cv-text-pink);
}

.about__cv .cyan-text {
  color: var(--cv-text-cyan);
}

.about__cv .comment-text {
  color: var(--cv-text-comment);
}

.about__cv .blue-text {
  color: var(--cv-text-blue);
}

.about__cv .yellow-text {
  color: var(--cv-text-yellow);
}

.about__cv .orange-text {
  color: var(--cv-text-orange);
}

/* FONT SIZE */
.about__cv span,
.about__cv p {
  font-size: 1.2rem;
}

.about__cv h4 {
  font-size: 1.4rem;
}

.about__cv h3 {
  font-size: 1.8rem;
}

.about__cv h2 {
  font-size: 2rem;
}

.about__cv h1 {
  font-size: 2.5rem;
}

@media screen and (max-width: 1024px) {
  .about__cv span,
  .about__cv p {
    font-size: 1rem;
  }

  .about__cv h4 {
    font-size: 1.2rem;
  }

  .about__cv h3 {
    font-size: 1.6rem;
  }

  .about__cv h2 {
    font-size: 1.8rem;
  }

  .about__cv h1 {
    font-size: 2.3rem;
  }

  .about__cv {
    width: 100%;
    padding: 1.5rem 1.5rem;
    overflow-x: hidden;
  }

  .about__hero{
    padding: 1rem;
    flex-direction: column;
  }

  .cv__header {
    flex-direction: column;
  }

  .cv__header .right p {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-bottom: 0.5rem;
    flex-wrap: wrap;
  }

  .cv__header .right p span {
    margin-left: 10px;
  }

  .cv__grid {
    display: grid;
    grid-template-columns: 1fr;
  }

  .about__quote .quote {
    font-size: 3.1rem;
  }

  .about__quote .symbol {
    font-size: 5.6rem;
    margin-left: -1rem;
  }

  .about__quote .sub-content {
    margin-top: 0.6rem;
    font-size: 1.4rem;
  }
}

@keyframes hero__fadeInRight {
  from {
    opacity: 0;
    transform: translateX(-5%);
  }
  to {
    opacity: 0.6;
    transform: translateX(0);
  }
}

@keyframes hero__fadeInLeft {
  from {
    opacity: 0;
    transform: translateX(5%);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes quotes__fadeInUp {
  from {
    opacity: 0;
    left: 50%;
    transform: translateX(-50%);
    margin-top: 5rem;
  }
  to {
    opacity: 1;
    left: 50%;
    transform: translateX(-50%);
    margin-top: 0;
  }
}

@keyframes cv__fadeIn {
  from {
    opacity: 0;
    top: 320vh;
  }
  to {
    opacity: 1;
    top: 300vh;
  }
}

